--- a/Eventi-webratio/Archivio/supereroifragili-21/Css/stile-custom_convegno.css
+++ b/Eventi-webratio/Archivio/supereroifragili-21/Css/stile-custom_convegno.css
@@ -10,163 +10,126 @@
 .convegno-supereroi {
   /* temi ------- */
 }
-
 .convegno-supereroi .writing {
-  font-family: 'Codystar', cursive !important;
+  font-family: "Codystar", cursive !important;
 }
-
 .convegno-supereroi h2, .convegno-supereroi h4 {
   text-transform: uppercase;
   color: #232034;
 }
-
 .convegno-supereroi .titolo-convegno {
   text-align: right;
   /*logo convegno */
 }
-
 .convegno-supereroi .titolo-convegno .titolo {
   max-width: 85%;
 }
-
 .convegno-supereroi .titolo-convegno h3, .convegno-supereroi .titolo-convegno h6 {
   text-transform: uppercase;
   font-weight: 400;
 }
-
 .convegno-supereroi .titolo-convegno h5 {
   font-weight: 700;
 }
-
 .convegno-supereroi .linea-1, .convegno-supereroi .linea-2, .convegno-supereroi .linea-3, .convegno-supereroi .linea-4 {
   position: fixed;
-  width: calc(100%*2);
-  border: 2px solid #ffffff28;
-  -webkit-transform-origin: left;
-          transform-origin: left;
+  width: 200%;
+  border: 2px solid rgba(255, 255, 255, 0.1568627451);
+  transform-origin: left;
   left: -20px;
 }
-
 .convegno-supereroi .linea-1 {
-  -webkit-transform: rotate(30deg);
-          transform: rotate(30deg);
+  transform: rotate(30deg);
   top: 10%;
 }
-
 .convegno-supereroi .linea-2 {
-  -webkit-transform: rotate(-30deg);
-          transform: rotate(-30deg);
+  transform: rotate(-30deg);
   bottom: 35%;
 }
-
 .convegno-supereroi .linea-3 {
-  -webkit-transform: rotate(65deg);
-          transform: rotate(65deg);
+  transform: rotate(65deg);
   bottom: 62%;
 }
-
 .convegno-supereroi .linea-4 {
-  -webkit-transform: rotate(13deg);
-          transform: rotate(13deg);
+  transform: rotate(13deg);
   top: 32%;
 }
-
 .convegno-supereroi h3 {
   font-weight: 700;
 }
-
 .convegno-supereroi h3.intro {
-  font-family: 'freightdisp',serif;
+  font-family: "freightdisp", serif;
   text-transform: none;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-
 .convegno-supereroi .box-top {
   border-radius: 1.5rem;
   padding: 1.5rem;
-  background: #cd5e74;
-  background: -webkit-gradient(linear, left bottom, left top, from(#cd5e74), color-stop(35%, #4982a9), color-stop(65%, #4982a9), to(#232034));
-  background: linear-gradient(0deg, #cd5e74 0%, #4982a9 35%, #4982a9 65%, #232034 100%);
+  background: rgb(205, 94, 116);
+  background: linear-gradient(0deg, rgb(205, 94, 116) 0%, rgb(73, 130, 169) 35%, rgb(73, 130, 169) 65%, rgb(35, 32, 52) 100%);
   color: #fff;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi .box-top {
     padding-left: 0;
     padding-right: 1rem;
   }
 }
-
 .convegno-supereroi .box {
   border-radius: 1.5rem;
   padding: 1.5rem;
   background: #f4f4f4;
   margin: 1rem 0;
 }
-
 .convegno-supereroi #struttura .box {
   border-radius: 1.5rem;
   padding: 1.5rem;
   background: #f4f4f4;
   margin: 1rem;
   min-height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   /* align-items: center; */
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 .convegno-supereroi #struttura .box p {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   text-align: center;
 }
-
 .convegno-supereroi #partecipare .box, .convegno-supereroi #temi div:nth-child(2) .box {
   background: #232034;
   color: #fff;
 }
-
 .convegno-supereroi #partecipare .box h2, .convegno-supereroi #temi div:nth-child(2) .box h2 {
   color: #dc9746;
 }
-
 .convegno-supereroi #partecipare .box .writing, .convegno-supereroi #temi div:nth-child(2) .box .writing {
   color: #fff;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #0ff, 0 0 80px #0ff, 0 0 90px #0ff, 0 0 100px #0ff, 0 0 150px #0ff;
 }
-
 .convegno-supereroi .box-color {
   border: 2px solid #dc9746;
   border-style: dotted;
   margin-top: 2rem;
   margin-bottom: 20px;
 }
-
 .convegno-supereroi .box-color p {
   padding: 2rem;
   color: #cd5e74;
   font-weight: 600;
 }
-
 .convegno-supereroi .box-offerta {
   text-align: center;
   background-color: #4982a9;
   margin-top: 2rem;
   margin-bottom: 20px;
 }
-
 .convegno-supereroi .box-offerta img + p {
   padding: 2rem;
   color: white;
   font-weight: 600;
 }
-
 .convegno-supereroi .box-offerta .img-responsive {
   max-width: 380px;
   width: 100%;
@@ -174,96 +137,75 @@
   margin-left: auto;
   margin-right: auto;
 }
-
 .convegno-supereroi .box-offerta .info-offerta {
   color: white;
   font-size: 1.3rem;
   padding: 0 15% 4% 15%;
 }
-
 @media (max-width: 1200px) {
   .convegno-supereroi .box-offerta .info-offerta {
     font-size: 1.2rem;
   }
 }
-
 @media (max-width: 768px) {
   .convegno-supereroi .box-offerta .info-offerta {
     font-size: 1.1rem;
   }
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi .box-offerta .info-offerta {
     font-size: 1rem;
   }
 }
-
 .convegno-supereroi .info-chiusura {
   margin: 5% auto;
 }
-
 .convegno-supereroi .info-chiusura p {
   color: #666;
   font-size: 1.1rem;
 }
-
 @media (max-width: 1200px) {
   .convegno-supereroi .info-chiusura p {
-    font-size: 1.0rem;
+    font-size: 1rem;
   }
 }
-
 @media (max-width: 768px) {
   .convegno-supereroi .info-chiusura p {
-    font-size: .95rem;
+    font-size: 0.95rem;
   }
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi .info-chiusura p {
     font-size: 0.8rem;
   }
 }
-
 .convegno-supereroi .box_cta {
   padding-bottom: 30px;
 }
-
 .convegno-supereroi .contenitore-titolo {
   padding: 10px;
   background-color: #fff;
-  animation: colorchange 50s;
-  /* animation-name followed by duration in seconds*/
+  animation: colorchange 50s; /* animation-name followed by duration in seconds*/
   /* you could also use milliseconds (ms) or something like 2.5s */
-  -webkit-animation: colorchange 50s;
-  /* Chrome and Safari */
+  -webkit-animation: colorchange 50s; /* Chrome and Safari */
 }
-
 .convegno-supereroi .intestazione {
   width: 100%;
   top: 0;
   left: 0;
   margin: 40px 0 0 0;
 }
-
 .convegno-supereroi .row-eq-height {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 .convegno-supereroi div.balloon img {
   position: absolute;
 }
-
 .convegno-supereroi div.balloon .balloon1 {
   width: 40%;
   top: 10px;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi div.balloon .balloon1 {
     width: 70%;
@@ -271,7 +213,6 @@
     left: 5px;
   }
 }
-
 .convegno-supereroi div.balloon .balloon2 {
   -webkit-animation-delay: 1.2s;
           animation-delay: 1.2s;
@@ -279,7 +220,6 @@
   left: 44%;
   top: 32%;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi div.balloon .balloon2 {
     width: 100px;
@@ -287,15 +227,13 @@
     top: 10px;
   }
 }
-
 .convegno-supereroi div.balloon .balloon3 {
-  -webkit-animation-delay: .3s;
-          animation-delay: .3s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
   width: 22%;
   left: 62%;
   top: 55%;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi div.balloon .balloon3 {
     width: 43px;
@@ -303,16 +241,14 @@
     left: 38px;
   }
 }
-
 .convegno-supereroi div.balloon .balloon4 {
-  -webkit-animation-delay: .8s;
-          animation-delay: .8s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
   width: 32%;
   top: 10%;
   right: 0;
   height: auto;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi div.balloon .balloon4 {
     width: 57px;
@@ -320,16 +256,14 @@
     top: 59%;
   }
 }
-
 .convegno-supereroi div.balloon .balloon5 {
-  -webkit-animation-delay: .4s;
-          animation-delay: .4s;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
   width: 38%;
   left: 100px;
   top: 65%;
   height: auto;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi div.balloon .balloon5 {
     width: 100px;
@@ -337,26 +271,22 @@
     top: 80%;
   }
 }
-
 .convegno-supereroi div.balloon .letter {
-  opacity: .3;
+  opacity: 0.3;
   width: 50px;
   left: 30%;
   bottom: 11%;
 }
-
 .convegno-supereroi div.balloon .texture-1 {
   width: 30%;
-  opacity: .3;
+  opacity: 0.3;
 }
-
 .convegno-supereroi div.balloon .texture-2 {
   width: 50%;
-  opacity: .1;
+  opacity: 0.1;
   top: 20px;
   right: 0;
 }
-
 .convegno-supereroi .float {
   -webkit-animation-name: Floating;
           animation-name: Floating;
@@ -367,182 +297,142 @@
   -webkit-animation-timing-function: ease-in-out;
           animation-timing-function: ease-in-out;
 }
-
 @-webkit-keyframes Floating {
   from {
-    -webkit-transform: translate(0, 0px);
-            transform: translate(0, 0px);
+    transform: translate(0, 0px);
   }
   65% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
+    transform: translate(0, 20px);
   }
   to {
-    -webkit-transform: translate(0, 0px);
-            transform: translate(0, 0px);
+    transform: translate(0, 0px);
   }
 }
-
 @keyframes Floating {
   from {
-    -webkit-transform: translate(0, 0px);
-            transform: translate(0, 0px);
+    transform: translate(0, 0px);
   }
   65% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
+    transform: translate(0, 20px);
   }
   to {
-    -webkit-transform: translate(0, 0px);
-            transform: translate(0, 0px);
+    transform: translate(0, 0px);
   }
 }
-
 .convegno-supereroi .format div {
   color: #333;
 }
-
 .convegno-supereroi .format div p {
   font-size: 1.2rem;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi .format div p {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 }
-
 .convegno-supereroi .format div h3 {
   margin-bottom: 5px;
 }
-
 .convegno-supereroi .format div .descrizione {
   top: 0;
   padding: 0 15px;
-  -webkit-transform: translate(-10px, 2px);
-          transform: translate(-10px, 2px);
+  transform: translate(-10px, 2px);
 }
-
 .convegno-supereroi .format div .descrizione-2 {
   top: 0;
   padding: 0 15px;
-  -webkit-transform: translate(-3px, 30px);
-          transform: translate(-3px, 30px);
+  transform: translate(-3px, 30px);
 }
-
 .convegno-supereroi .format div img {
   max-width: 50%;
   margin: 0 auto;
 }
-
 .convegno-supereroi .letter p {
   display: inline-block;
   padding-left: 5px;
-  webkit-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
-
 .convegno-supereroi .letter p:hover {
   color: #232034;
-  -webkit-transform: translate(0, -5px);
-          transform: translate(0, -5px);
+  transform: translate(0, -5px);
 }
-
 .convegno-supereroi .letter p + p {
   margin-top: -15px;
 }
-
 .convegno-supereroi .letter span {
   font-size: 30px;
   font-weight: 900;
 }
-
 .convegno-supereroi .letter p:hover span {
   color: #232034 !important;
 }
-
 .convegno-supereroi.esperti {
   background-color: #f4f4f4;
   margin-left: -10px;
   margin-right: -10px;
   padding: 3rem 0;
 }
-
 .convegno-supereroi.esperti p {
   padding: 0 15rem;
 }
-
 @media (max-width: 991px) {
   .convegno-supereroi.esperti p {
     padding: 0 8rem;
   }
 }
-
 @media (max-width: 768px) {
   .convegno-supereroi.esperti p {
     padding: 0 10px;
   }
 }
-
 .convegno-supereroi .imgEsperti {
   display: inline-block;
   padding: 8px;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi .imgEsperti {
     max-width: 150px;
   }
 }
-
 .convegno-supereroi .imgEsperti.uno {
-  -webkit-animation-delay: .3s;
-          animation-delay: .3s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
 }
-
 .convegno-supereroi .imgEsperti.due {
-  -webkit-animation-delay: .8s;
-          animation-delay: .8s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
-
 .convegno-supereroi .imgEsperti.quattro {
   -webkit-animation-delay: 1.2s;
           animation-delay: 1.2s;
 }
-
 .convegno-supereroi .p-b {
   padding-bottom: 2rem;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi .p-b {
     padding-bottom: 1rem;
   }
 }
-
 .convegno-supereroi .p-t {
   padding-top: 2rem;
 }
-
 @media (max-width: 576px) {
   .convegno-supereroi .p-t {
     padding-top: 1rem;
   }
 }
-
 .convegno-supereroi .menu-ancore {
   text-align: center;
   text-transform: uppercase;
   padding: 2rem 2rem;
 }
-
 @media (max-width: 768px) {
   .convegno-supereroi .menu-ancore {
-    padding: .5rem;
+    padding: 0.5rem;
   }
 }
-
 .convegno-supereroi .menu-ancore a div {
   background-color: #cd5e74;
   border-radius: 1.5rem;
@@ -550,47 +440,36 @@
   width: 100%;
   margin: 1rem 0;
   color: #fff;
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
+  transition: all 0.4s ease;
 }
-
 .convegno-supereroi .menu-ancore a div:hover {
   background-color: #232034;
 }
-
 .convegno-supereroi .box .cardz {
   border-radius: 1.5rem;
   padding: 1.5rem;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  transition: all 0.5s;
 }
-
 @media (max-width: 768px) {
   .convegno-supereroi .box .cardz {
     padding: 1rem;
   }
 }
-
 .convegno-supereroi .elenco {
   padding-left: 0px;
 }
-
 .convegno-supereroi .elenco li {
   display: inline-block !important;
   margin-right: 1rem;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   font-weight: 600;
 }
-
 .convegno-supereroi .elenco li p {
   margin-bottom: 5px;
 }
-
 .convegno-supereroi .elenco li:nth-child(2n+1) {
   color: #232034;
 }
-
 .convegno-supereroi .elenco li:nth-child(2n+2) {
   color: #cd5e74;
 }
@@ -613,5 +492,4 @@
 
 .event-sezioni .sezione-AGGIORNAMI {
   background-color: transparent !important;
-}
-/*# sourceMappingURL=stile-custom_convegno.css.map */
+}/*# sourceMappingURL=stile-custom_convegno.css.map */
