--- a/Eventi-webratio/Base/Css/stile-custom_convegno.css
+++ b/Eventi-webratio/Base/Css/stile-custom_convegno.css
@@ -1,52 +1,43 @@
 .convegno-logopedia {
   /* temi ------- */
 }
-
 .convegno-logopedia h2, .convegno-logopedia h4 {
   text-transform: uppercase;
 }
-
 .convegno-logopedia .intestazione h2 {
   font-weight: 500;
 }
-
 .convegno-logopedia h3 {
   font-weight: 700;
 }
-
 .convegno-logopedia h3.intro {
-  font-family: 'freightdisp',serif;
+  font-family: "freightdisp", serif;
   text-transform: none;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-
 .convegno-logopedia .box-color {
   border: 2px solid #da9c2b;
   border-style: dotted;
   margin-top: 2rem;
   margin-bottom: 20px;
 }
-
 .convegno-logopedia .box-color p {
   padding: 2rem;
   color: #A05B8E;
   font-weight: 600;
 }
-
 .convegno-logopedia .box-offerta {
   text-align: center;
   background-color: #66A1A3;
   margin-top: 2rem;
   margin-bottom: 20px;
 }
-
 .convegno-logopedia .box-offerta img + p {
   padding: 2rem;
   color: white;
   font-weight: 600;
 }
-
 .convegno-logopedia .box-offerta .img-responsive {
   max-width: 380px;
   width: 100%;
@@ -54,96 +45,75 @@
   margin-left: auto;
   margin-right: auto;
 }
-
 .convegno-logopedia .box-offerta .info-offerta {
   color: white;
   font-size: 1.3rem;
   padding: 0 15% 4% 15%;
 }
-
 @media (max-width: 1200px) {
   .convegno-logopedia .box-offerta .info-offerta {
     font-size: 1.2rem;
   }
 }
-
 @media (max-width: 768px) {
   .convegno-logopedia .box-offerta .info-offerta {
     font-size: 1.1rem;
   }
 }
-
 @media (max-width: 576px) {
   .convegno-logopedia .box-offerta .info-offerta {
     font-size: 1rem;
   }
 }
-
 .convegno-logopedia .info-chiusura {
   margin: 5% auto;
 }
-
 .convegno-logopedia .info-chiusura p {
   color: #666;
   font-size: 1.1rem;
 }
-
 @media (max-width: 1200px) {
   .convegno-logopedia .info-chiusura p {
-    font-size: 1.0rem;
+    font-size: 1rem;
   }
 }
-
 @media (max-width: 768px) {
   .convegno-logopedia .info-chiusura p {
-    font-size: .95rem;
+    font-size: 0.95rem;
   }
 }
-
 @media (max-width: 576px) {
   .convegno-logopedia .info-chiusura p {
     font-size: 0.8rem;
   }
 }
-
 .convegno-logopedia .box_cta {
   padding-bottom: 30px;
 }
-
 .convegno-logopedia .contenitore-titolo {
   padding: 10px;
   background-color: #fff;
-  animation: colorchange 50s;
-  /* animation-name followed by duration in seconds*/
+  animation: colorchange 50s; /* animation-name followed by duration in seconds*/
   /* you could also use milliseconds (ms) or something like 2.5s */
-  -webkit-animation: colorchange 50s;
-  /* Chrome and Safari */
+  -webkit-animation: colorchange 50s; /* Chrome and Safari */
 }
-
 .convegno-logopedia .intestazione {
   width: 100%;
   top: 0;
   left: 0;
   margin: 40px 0 0 0;
 }
-
 .convegno-logopedia .row-eq-height {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 .convegno-logopedia div.balloon img {
   position: absolute;
 }
-
 .convegno-logopedia div.balloon .balloon1 {
   width: 40%;
   top: 10px;
 }
-
 .convegno-logopedia div.balloon .balloon2 {
   -webkit-animation-delay: 1.2s;
           animation-delay: 1.2s;
@@ -151,49 +121,42 @@
   left: 44%;
   top: 30px;
 }
-
 .convegno-logopedia div.balloon .balloon3 {
-  -webkit-animation-delay: .3s;
-          animation-delay: .3s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
   width: 22%;
   left: 62%;
   top: 140px;
 }
-
 .convegno-logopedia div.balloon .balloon4 {
-  -webkit-animation-delay: .8s;
-          animation-delay: .8s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
   width: 27%;
   top: 21px;
   right: 0;
   height: auto;
 }
-
 .convegno-logopedia div.balloon .letter {
-  opacity: .3;
+  opacity: 0.3;
   width: 50px;
   left: 30%;
   bottom: 11%;
 }
-
 .convegno-logopedia div.balloon .texture-1 {
   width: 30%;
-  opacity: .3;
+  opacity: 0.3;
 }
-
 .convegno-logopedia div.balloon .texture-2 {
   width: 50%;
-  opacity: .1;
+  opacity: 0.1;
   top: 20px;
   right: 0;
 }
-
 @media (max-width: 576px) {
   .convegno-logopedia div.balloon {
-    opacity: .5;
+    opacity: 0.5;
   }
 }
-
 .convegno-logopedia .float {
   -webkit-animation-name: Floating;
           animation-name: Floating;
@@ -204,180 +167,138 @@
   -webkit-animation-timing-function: ease-in-out;
           animation-timing-function: ease-in-out;
 }
-
 @-webkit-keyframes Floating {
   from {
-    -webkit-transform: translate(0, 0px);
-            transform: translate(0, 0px);
+    transform: translate(0, 0px);
   }
   65% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
+    transform: translate(0, 20px);
   }
   to {
-    -webkit-transform: translate(0, 0px);
-            transform: translate(0, 0px);
+    transform: translate(0, 0px);
   }
 }
-
 @keyframes Floating {
   from {
-    -webkit-transform: translate(0, 0px);
-            transform: translate(0, 0px);
+    transform: translate(0, 0px);
   }
   65% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
+    transform: translate(0, 20px);
   }
   to {
-    -webkit-transform: translate(0, 0px);
-            transform: translate(0, 0px);
+    transform: translate(0, 0px);
   }
 }
-
 .convegno-logopedia .format div {
   color: #333;
 }
-
 .convegno-logopedia .format div p {
   font-size: 1.2rem;
 }
-
 @media (max-width: 576px) {
   .convegno-logopedia .format div p {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 }
-
 .convegno-logopedia .format div h3 {
   margin-bottom: 5px;
 }
-
 .convegno-logopedia .format div .descrizione {
   top: 0;
   padding: 0 15px;
-  -webkit-transform: translate(-10px, 2px);
-          transform: translate(-10px, 2px);
+  transform: translate(-10px, 2px);
 }
-
 .convegno-logopedia .format div .descrizione-2 {
   top: 0;
   padding: 0 15px;
-  -webkit-transform: translate(-3px, 30px);
-          transform: translate(-3px, 30px);
+  transform: translate(-3px, 30px);
 }
-
 .convegno-logopedia .format div.q-time img, .convegno-logopedia .format div.workshop img {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  transform: rotate(180deg);
 }
-
 .convegno-logopedia .format div.plenaria h3 {
   color: #EC4F48;
 }
-
 .convegno-logopedia .format div.q-time h3 {
   color: #6C8C58;
 }
-
 .convegno-logopedia .format div.workshop h3 {
   color: #66A1A3;
 }
-
 .convegno-logopedia .format div.simposi h3 {
   color: #A05B8E;
 }
-
 .convegno-logopedia .letter p {
   display: inline-block;
   padding-left: 5px;
-  webkit-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
-
 .convegno-logopedia .letter p:hover {
   color: #EC4F48;
-  -webkit-transform: translate(0, -5px);
-          transform: translate(0, -5px);
+  transform: translate(0, -5px);
 }
-
 .convegno-logopedia .letter p + p {
   margin-top: -15px;
 }
-
 .convegno-logopedia .letter span {
   font-size: 30px;
   font-weight: 900;
 }
-
 .convegno-logopedia .letter p:hover span {
   color: #EC4F48 !important;
 }
-
 .convegno-logopedia.esperti {
   background-color: #f4f4f4;
   margin-left: -10px;
   margin-right: -10px;
   padding: 3rem 0;
 }
-
 .convegno-logopedia.esperti p {
   padding: 0 15rem;
 }
-
 @media (max-width: 991px) {
   .convegno-logopedia.esperti p {
     padding: 0 8rem;
   }
 }
-
 @media (max-width: 768px) {
   .convegno-logopedia.esperti p {
     padding: 0 10px;
   }
 }
-
 .convegno-logopedia .imgEsperti {
   display: inline-block;
   padding: 8px;
 }
-
 @media (max-width: 576px) {
   .convegno-logopedia .imgEsperti {
     max-width: 150px;
   }
 }
-
 .convegno-logopedia .imgEsperti.uno {
-  -webkit-animation-delay: .3s;
-          animation-delay: .3s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
 }
-
 .convegno-logopedia .imgEsperti.due {
-  -webkit-animation-delay: .8s;
-          animation-delay: .8s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
-
 .convegno-logopedia .imgEsperti.quattro {
   -webkit-animation-delay: 1.2s;
           animation-delay: 1.2s;
 }
-
 .convegno-logopedia .p-b {
   padding-bottom: 2rem;
 }
-
 @media (max-width: 576px) {
   .convegno-logopedia .p-b {
     padding-bottom: 1rem;
   }
 }
-
 .convegno-logopedia .p-t {
   padding-top: 2rem;
 }
-
 @media (max-width: 576px) {
   .convegno-logopedia .p-t {
     padding-top: 1rem;
@@ -402,5 +323,4 @@
 
 .event-sezioni .sezione-AGGIORNAMI {
   background-color: transparent !important;
-}
-/*# sourceMappingURL=stile-custom_convegno.css.map */
+}/*# sourceMappingURL=stile-custom_convegno.css.map */
